# curupira

./: Cargo.toml  README.md  docker-compose.yml
backend-api/: Cargo.toml  Dockerfile  model.onnx
backend-api/data/: alerts.db
backend-api/src/: db.rs  inference.rs  main.rs
edge-sentinel/: Cargo.toml
edge-sentinel/src/: main.rs
frontend-panel/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-panel/src/: App.jsx  App.test.jsx  index.css
frontend-panel/src/components/: AlertsList.jsx  AlertsList.test.jsx  DetectionsChart.jsx  DetectionsChart.test.jsx  StatusCard.jsx  StatusCard.test.jsx
scripts/: rustc-homebrew-llvm21.sh  rustdoc-homebrew-llvm21.sh
training/: README.md  evaluate.py  generate_synthetic_dataset.py  generate_synthetic_testset.py  requirements.txt  train.py
