[package]
name = "edge-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cpal = "0.15"
hound = "3.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
